--- a/src/App.css
+++ b/src/App.css
@@ -4,18 +4,18 @@
   height: 100vh;
   justify-content: center;
   align-items: center;
-}
-
-.game-board {
+  overflow: hidden;
 }
 
 .game-info {
   margin-top: 16px;
   width: 100%;
+  height: 200px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin-left: 20px;
 }
 
 .move-button {
@@ -28,4 +28,28 @@
   margin-bottom: 10px;
   padding: 10px 20px;
   text-decoration: none;
+}
+
+.status {
+  margin-right: 20px;
+}
+
+.history-list {
+  width: 230px;
+  overflow: auto;
+}
+
+.history-list::-webkit-scrollbar {
+  width: 10px;
+}
+
+.history-list::-webkit-scrollbar-track {
+  background: gray;
+  border-radius: 8px;
+}
+
+.history-list::-webkit-scrollbar-thumb {
+  background: paleturquoise;
+  background-clip: padding-box;
+  border-radius: 8px;
 }
